@@ -24,11 +24,13 @@
 #include "RestDumpHandler.h"
 
 #include "ApplicationFeatures/ApplicationServer.h"
+#include "Auth/TokenCache.h"
 #include "Basics/StaticStrings.h"
 #include "Cluster/ClusterFeature.h"
 #include "Cluster/ClusterInfo.h"
 #include "Cluster/ClusterTypes.h"
 #include "Cluster/ServerState.h"
+#include "GeneralServer/AuthenticationFeature.h"
 #include "GeneralServer/RequestLane.h"
 #include "Inspection/VPack.h"
 #include "RocksDBEngine/RocksDBDumpManager.h"
@@ -36,6 +38,7 @@
 #include "StorageEngine/EngineSelectorFeature.h"
 #include "Utils/ExecContext.h"
 
+#include <absl/strings/str_cat.h>
 #include <velocypack/Iterator.h>
 #include <velocypack/Slice.h>
 
@@ -126,8 +129,15 @@ ResultT<std::pair<std::string, bool>> RestDumpHandler::forwardingTarget() {
   if (ServerState::instance()->isCoordinator()) {
     ServerID const& DBserver = _request->value("dbserver");
     if (!DBserver.empty()) {
-      // if DBserver property present, remove auth header
+      // if DBserver property present, add user header
       _request->addHeader(StaticStrings::DumpAuthUser, _request->user());
+
+      // forward JWT
+      auto auth = AuthenticationFeature::instance();
+      if (auth != nullptr && auth->isActive()) {
+        _request->addHeader(StaticStrings::Authorization,
+                            "bearer " + auth->tokenCache().jwtToken());
+      }
       return std::make_pair(DBserver, true);
     }
 
@@ -265,15 +275,21 @@ Result RestDumpHandler::validateRequest() {
       RocksDBDumpContextOptions opts;
       velocypack::deserializeUnsafe(body, opts);
 
-      ExecContext& exec =
-          *static_cast<ExecContext*>(_request->requestContext());
+      // make this version of dump compatible with the previous version of
+      // arangodump. the previous version assumed that as long as you are
+      // an admin user, you can dump every collection
+      ExecContextSuperuserScope escope(ExecContext::current().isAdminUser());
 
-      for (auto const& it : opts.shards) {
-        // get collection name
-        auto collectionName = _clusterInfo.getCollectionNameForShard(it);
-        if (!exec.canUseCollection(_request->databaseName(), collectionName,
-                                   auth::Level::RO)) {
-          return {TRI_ERROR_FORBIDDEN};
+      if (!ExecContext::current().isSuperuser()) {
+        for (auto const& it : opts.shards) {
+          // get collection name
+          auto collectionName = _clusterInfo.getCollectionNameForShard(it);
+          if (!ExecContext::current().canUseCollection(
+                  _request->databaseName(), collectionName, auth::Level::RO)) {
+            return {TRI_ERROR_FORBIDDEN,
+                    absl::StrCat("insufficient permissions to access shard ",
+                                 it, " of collection ", collectionName)};
+          }
         }
       }
     }
